--- a/ngapp/src/assets/i18n/fr.json
+++ b/ngapp/src/assets/i18n/fr.json
@@ -1,6 +1,11 @@
 {
+   "LANG": {
+      "NAME": "French",
+      "ICON": "fr.png"
+   },
    "HOME": {
       "HELLO": "Bonjour, essayons ngx-translate",
-      "TITLE":"Bienvenue a "
-   }
+      "TITLE": "Bienvenue a "
+   },
+   "HELPSTART":"Voici des liens pour aider a demarrer:"
 }
