--- a/ngapp/src/assets/i18n/fr.json
+++ b/ngapp/src/assets/i18n/fr.json
@@ -1,7 +1,6 @@
 {
    "LANG": {
-      "NAME": "French",
-      "ICON": "fr.png"
+      "NAME": "French"
    },
    "HOME": {
       "HELLO": "Bonjour, essayons ngx-translate",
