--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -1,11 +1,11 @@
 {
-   "LANG": {
-      "NAME": "English",
-      "ICON": "en.svg"
-   },
-   "HOME": {
-      "HELLO": "Hello here that is a try of the ngx-translate - This is obviously the English string ",
-      "TITLE": "Welcome to "
-   },
-   "HELPSTART":"Here are some links to help you start:"
+	"HELPSTART": "Here are some links to help you start:",
+	"HOME": {
+		"HELLO": "Hello here that is a try of the ngx-translate - This is obviously the English string ",
+		"MSG": "Welcome to this fantastic translation.  Using the Editor BabelEdit is great.  You have your 3 strings in one page.",
+		"TITLE": "Welcome to "
+	},
+	"LANG": {
+		"NAME": "English"
+	}
 }
