--- a/docs/assets/i18n/fr.json
+++ b/docs/assets/i18n/fr.json
@@ -1,11 +1,11 @@
 {
-   "LANG": {
-      "NAME": "French",
-      "ICON": "fr.png"
-   },
-   "HOME": {
-      "HELLO": "Bonjour, essayons ngx-translate",
-      "TITLE": "Bienvenue a "
-   },
-   "HELPSTART":"Voici des liens pour aider a demarrer:"
+	"HELPSTART": "Voici des liens pour aider a demarrer:",
+	"HOME": {
+		"HELLO": "Bonjour, essayons ngx-translate",
+		"MSG": "Bienvenue dans cette traduction fantastique. Utilisation de l'éditeur BabelEdit est excellent. Vous avez vos 3 chaînes dans une page.",
+		"TITLE": "Bienvenue a "
+	},
+	"LANG": {
+		"NAME": "French"
+	}
 }
