feature: Getting Icons from Web rather than copying all SVGs

--- a/ngapp/src/assets/i18n/en.json
+++ b/ngapp/src/assets/i18n/en.json
@@ -11,5 +11,8 @@
 	"LANG": {
 		"NAME": "English"
 	},
-	"WELCOME": "Welcome {{name}}"
+	"WELCOME": "Welcome {{name}}",
+	"TEST":{
+		"DOSOMETHING":"Do Something"
+	}
 }
