--- a/ngapp/src/assets/i18n/es.json
+++ b/ngapp/src/assets/i18n/es.json
@@ -11,5 +11,8 @@
 	"LANG": {
 		"NAME": "Spanish"
 	},
-	"WELCOME": "Bienvenido {{name}}"
+	"WELCOME": "Bienvenido {{name}}",
+	"TEST": {
+		"DOSOMETHING": "hacer algo"
+	}
 }
