--- a/ngapp/src/assets/i18n/fr.json
+++ b/ngapp/src/assets/i18n/fr.json
@@ -11,5 +11,8 @@
 	"LANG": {
 		"NAME": "French"
 	},
-	"WELCOME": "Bienvenue {{name}}"
+	"WELCOME": "Bienvenue {{name}}",
+	"TEST":{
+		"DOSOMETHING":"Faire quelque chose"
+	}
 }
