--- a/ngapp/src/assets/i18n/de.json
+++ b/ngapp/src/assets/i18n/de.json
@@ -6,7 +6,9 @@
 	"HOME": {
 		"HELLO": "Hallo hier, das ist ein Versuch des ngx-translate - Dies ist offensichtlich die englische Zeichenfolge ",
 		"MSG": "Willkommen zu dieser fantastischen Übersetzung. Die Verwendung des Editors BabelEdit ist großartig. Sie haben Ihre 3 Saiten auf einer Seite.",
-		"TITLE": "Willkommen zu "
+		"TITLE": "Willkommen zu ",
+		"TOURHEROES":"Tour der Helden",
+		"DOC":"Dokumentation"
 	},
 	"LANG": {
 		"NAME": "German"
