--- a/ngapp/src/assets/i18n/en.json
+++ b/ngapp/src/assets/i18n/en.json
@@ -6,7 +6,9 @@
 	"HOME": {
 		"HELLO": "Hello here that is a try of the ngx-translate - This is obviously the English string ",
 		"MSG": "Welcome to this fantastic translation.  Using the Editor BabelEdit is great.  You have your 3 strings in one page.",
-		"TITLE": "Welcome to "
+		"TITLE": "Welcome to ",
+		"TOURHEROES":"Tour of Heroes",
+		"DOC":"Documentation"
 	},
 	"LANG": {
 		"NAME": "English"
