--- a/ngapp/src/assets/i18n/fr.json
+++ b/ngapp/src/assets/i18n/fr.json
@@ -6,7 +6,9 @@
 	"HOME": {
 		"HELLO": "Bonjour, essayons ngx-translate",
 		"MSG": "Bienvenue dans cette traduction fantastique. Utilisation de l'éditeur BabelEdit est excellent. Vous avez vos 3 chaînes dans une page.",
-		"TITLE": "Bienvenue a "
+		"TITLE": "Bienvenue a ",
+		"TOURHEROES":"Tour des heroes",
+		"DOC":"Documentation"
 	},
 	"LANG": {
 		"NAME": "French"
