--- a/ngapp/src/assets/i18n/es.json
+++ b/ngapp/src/assets/i18n/es.json
@@ -6,7 +6,9 @@
 	"HOME": {
 		"HELLO": "Bienvenido, intentemos ngx-translate",
 		"MSG": "Bienvenidos a esta fantástica traducción. Usar el Editor BabelEdit es genial. Tienes tus 3 cadenas en una sola página.",
-		"TITLE": "Bienvenido a "
+		"TITLE": "Bienvenido a ",
+		"TOURHEROES":"Tour das heroes",
+		"DOC":"Documentazion"
 	},
 	"LANG": {
 		"NAME": "Spanish"
