--- a/gcp-translate-api/src/assets/i18n/de.json
+++ b/gcp-translate-api/src/assets/i18n/de.json
@@ -1,20 +1,23 @@
 {
-	"CONTACT": {
-		"TITLE": "{{username}} Kontaktieren Sie uns mit diesen Mitteln:"
-	},
-	"HELPSTART": "Hier sind einige Links, die Ihnen beim Start helfen:",
-	"HOME": {
-		"HELLO": "Hallo hier, das ist ein Versuch des ngx-translate - Dies ist offensichtlich die englische Zeichenfolge ",
-		"MSG": "Willkommen zu dieser fantastischen Übersetzung. Die Verwendung des Editors BabelEdit ist großartig. Sie haben Ihre 3 Saiten auf einer Seite.",
-		"TITLE": "Willkommen zu ",
-		"TOURHEROES":"Tour der Helden",
-		"DOC":"Dokumentation"
-	},
-	"LANG": {
-		"NAME": "German"
-	},
-	"WELCOME": "HERZLICH WILLKOMMEN {{name}}",
-	"TEST":{
-		"DOSOMETHING":"Etwas tun"
-	}
+  "CONTACT": {
+    "TITLE": "{{username}} Kontaktieren Sie uns mit diesen Mitteln:"
+  },
+  "HELPSTART": "Hier sind einige Links, die Ihnen beim Start helfen:",
+  "HOME": {
+    "HELLO": "Hallo hier, das ist ein Versuch des ngx-translate - Dies ist offensichtlich die englische Zeichenfolge ",
+    "MSG": "Willkommen zu dieser fantastischen Übersetzung. Die Verwendung des Editors BabelEdit ist großartig. Sie haben Ihre 3 Saiten auf einer Seite.",
+    "TITLE": "Willkommen zu ",
+    "TOURHEROES": "Tour der Helden",
+    "DOC": "Dokumentation",
+    "FOOTER": {
+      "MYNOTES": "Hallo Welt ist viel mehr als ein einfaches \"Hallo\" und das wird sich niemals ändern"
+    }
+  },
+  "LANG": {
+    "NAME": "German"
+  },
+  "WELCOME": "HERZLICH WILLKOMMEN {{name}}",
+  "TEST": {
+    "DOSOMETHING": "Etwas tun"
+  }
 }
