--- a/gcp-translate-api/src/assets/i18n/es.json
+++ b/gcp-translate-api/src/assets/i18n/es.json
@@ -1,20 +1,23 @@
 {
-	"CONTACT": {
-		"TITLE": "{{username}} Contáctenos con estos medios:"
-	},
-	"HELPSTART": "Aquí hay algunos enlaces para ayudarte a comenzar:",
-	"HOME": {
-		"HELLO": "Bienvenido, intentemos ngx-translate",
-		"MSG": "Bienvenidos a esta fantástica traducción. Usar el Editor BabelEdit es genial. Tienes tus 3 cadenas en una sola página.",
-		"TITLE": "Bienvenido a ",
-		"TOURHEROES":"Tour das heroes",
-		"DOC":"Documentazion"
-	},
-	"LANG": {
-		"NAME": "Spanish"
-	},
-	"WELCOME": "Bienvenido {{name}}",
-	"TEST": {
-		"DOSOMETHING": "hacer algo"
-	}
+  "CONTACT": {
+    "TITLE": "{{username}} Contáctenos con estos medios:"
+  },
+  "HELPSTART": "Aquí hay algunos enlaces para ayudarte a comenzar:",
+  "HOME": {
+    "HELLO": "Bienvenido, intentemos ngx-translate",
+    "MSG": "Bienvenidos a esta fantástica traducción. Usar el Editor BabelEdit es genial. Tienes tus 3 cadenas en una sola página.",
+    "TITLE": "Bienvenido a ",
+    "TOURHEROES": "Tour das heroes",
+    "DOC": "Documentazion",
+    "FOOTER": {
+      "MYNOTES": "hola mundo es mucho más que un simple \"hola\" y eso nunca cambiará"
+    }
+  },
+  "LANG": {
+    "NAME": "Spanish"
+  },
+  "WELCOME": "Bienvenido {{name}}",
+  "TEST": {
+    "DOSOMETHING": "hacer algo"
+  }
 }
