--- a/gcp-translate-api/src/assets/i18n/en.json
+++ b/gcp-translate-api/src/assets/i18n/en.json
@@ -11,7 +11,8 @@
     "DOC": "Documentation",
     "FOOTER": {
       "MYNOTES": "hello world is much more than a simple \"hello\" and that will never change"
-    }
+    },
+    "CLI": "Hello world of command line tools. Translating automation is an optimal way to create cultural extension"
   },
   "LANG": {
     "NAME": "English"
