--- a/gcp-translate-api/tests/src/assets/i18n/de.json
+++ b/gcp-translate-api/tests/src/assets/i18n/de.json
@@ -4,7 +4,7 @@
   },
   "HELPSTART": "Hier sind einige Links, die Ihnen beim Start helfen:",
   "HOME": {
-    "HELLO": "Hallo Welt",
+    "HELLO": "Hallo hier, das ist ein Versuch des ngx-translate - Dies ist offensichtlich die englische Zeichenfolge ",
     "MSG": "Willkommen zu dieser fantastischen Übersetzung. Die Verwendung des Editors BabelEdit ist großartig. Sie haben Ihre 3 Saiten auf einer Seite.",
     "TITLE": "Willkommen zu ",
     "TOURHEROES": "Tour der Helden",
@@ -13,7 +13,8 @@
       "MYNOTES": "Hallo Welt ist viel mehr als ein einfaches \"Hallo\" und das wird sich niemals ändern"
     },
     "CLI": "Hallo Welt der Kommandozeilenwerkzeuge. Übersetzen von Automatisierung ist eine optimale Möglichkeit, kulturelle Erweiterungen zu schaffen",
-    "TEST": "Hallo Welt"
+    "TEST": "Hallo Welt der Softwareentwickler.",
+    "TST": "Hallo worlddof Softwareentwickler."
   },
   "LANG": {
     "NAME": "German"
