closing the experiment

--- a/gcp-translate-api/src/assets/i18n/de.json
+++ b/gcp-translate-api/src/assets/i18n/de.json
@@ -13,7 +13,8 @@
       "MYNOTES": "Hallo Welt ist viel mehr als ein einfaches \"Hallo\" und das wird sich niemals ändern"
     },
     "CLI": "Hallo Welt der Kommandozeilenwerkzeuge. Übersetzen von Automatisierung ist eine optimale Möglichkeit, kulturelle Erweiterungen zu schaffen",
-    "TEST": "Hallo Welt"
+    "TEST": "Hallo Welt",
+    "TST2": "Hallo worlddof Softwareentwickler."
   },
   "LANG": {
     "NAME": "German"
