--- a/gcp-translate-api/src/assets/i18n/es.json
+++ b/gcp-translate-api/src/assets/i18n/es.json
@@ -13,7 +13,8 @@
       "MYNOTES": "hola mundo es mucho más que un simple \"hola\" y eso nunca cambiará"
     },
     "CLI": "Hola mundo de las herramientas de línea de comandos. Traducir la automatización es una forma óptima de crear extensión cultural.",
-    "TEST": "Hola Mundo"
+    "TEST": "Hola Mundo",
+    "TST2": "Hola desarrollador de software worlddof."
   },
   "LANG": {
     "NAME": "Spanish"
