--- a/gcp-translate-api/src/assets/i18n/fr.json
+++ b/gcp-translate-api/src/assets/i18n/fr.json
@@ -13,7 +13,8 @@
       "MYNOTES": "Bonjour tout le monde est beaucoup plus qu'un simple \"bonjour\" et cela ne changera jamais"
     },
     "CLI": "Bonjour le monde des outils de ligne de commande. Traduire l’automatisation est un moyen optimal de créer une extension culturelle",
-    "TEST": "Bonjour le monde"
+    "TEST": "Bonjour le monde",
+    "TST2": "Bonjour worlddof développeur de logiciels."
   },
   "LANG": {
     "NAME": "French"
